--- a/CleanArchitecture/CleanArchitecture.API/appsettings.json
+++ b/CleanArchitecture/CleanArchitecture.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ConnectionString": "Data Source=10.1.3.21;Initial Catalog=PruebaSA;user id=smart_prueba;password=qwerty123456"
+    "ConnectionString": "Data Source=;Initial Catalog=PruebaSA;user id=;password="
   },
   "EmailSettings": {
     "FromAddress": "samuel.samame.che@gmail.com",
